# rachat

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE.md  build.rs  deny.toml  flake.nix  renovate.json  treefmt.toml
.github/workflows/: audit.yaml  ci.yaml  update-cargo-nix.yaml  update-flake.yaml
benches/: benchmarks.rs
crates/rachat/: Cargo.toml
crates/rachat-config/: Cargo.toml  build.rs  config.toml
crates/rachat-config/src/: de.rs  file_config.rs  lib.rs  platform_config.rs  ser.rs  static_config.rs
crates/rachat-config/src/gui/: mod.rs  qt.rs
crates/rachat-i18n/: Cargo.toml
crates/rachat-i18n/locales/en-US/: debuglog.ftl  main.ftl  test.ftl
crates/rachat-i18n/locales/nl-NL/: main.ftl
crates/rachat-i18n/locales/tok/: main.ftl
crates/rachat-i18n/src/: lib.rs  macros.rs
crates/rachat-misc/: Cargo.toml
crates/rachat-misc/src/: id_generator.rs  lib.rs
crates/rachat-misc/src/logging/: mod.rs
crates/rachat-misc/src/paths/: mod.rs
crates/rachat-qt/: Cargo.toml
crates/rachat-qt/qml/: main.qml
crates/rachat-qt/src/: cxxqt_object.rs  main.rs
crates/rachat/src/: lib.rs
de-DE/: main.ftl
hydra/: default.nix  jobsets.nix  spec.json
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
locales/nl-NL/: main.ftl
locales/tok/: main.ftl
qml/: main.qml
rachat/: Cargo.toml  build.rs
rachat-common/: Cargo.toml
rachat-common/src/: data_store.rs  lib.rs  utils.rs
rachat-common/src/config/: config_file.rs  mod.rs
rachat-common/src/crypto/: mod.rs  mutable_file.rs
rachat-qt/: build.rs
rachat-qt/qml/: main.qml
rachat-qt/src/: main.rs
rachat/qml/: login.qml  main.qml  root.qml  select-homeserver.qml
rachat/src/: cxxqt_object.rs  login_window.rs  main.rs  pages.rs  select_homeserver.rs
src/: cxxqt_object.rs  lib.rs  main.rs
src/config/: de.rs  file_config.rs  mod.rs  platform_config.rs  static_config.rs
src/i18n/: macros.rs  mod.rs
src/logging/: mod.rs
src/paths/: mod.rs
src/utils/: id_generator.rs  mod.rs
