[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
repository = "https://github.com/DarkKirb/rachat"
edition = "2024"
authors = ["Charlotte 🦝 Deleńkec <lotte@chir.rs>"]
license = "EUPL-1.2"

[workspace.lints.rust]
unsafe-code = "deny"
deprecated-safe = "forbid"
future-incompatible = "deny"
missing-docs = "warn"
variant-size-differences = "warn"

[workspace.lints.clippy]
nursery = { level = "warn", priority = -2 }
pedantic = { level = "warn", priority = -1 }
panic = "deny"
unwrap_used = "deny"
expect_used = "warn"
missing_docs_in_private_items = "warn"
