[package]
name = "rachat-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
blake3 = { version = "1.5.1", features = ["rayon"] }
directories-next = "2.0.0"
keyring = "2.3.3"
matrix-sdk = { version = "0.7.1", default-features = false, features = [
    "anyhow",
    "markdown",
    "experimental-sliding-sync",
    "rustls-tls",
    "e2e-encryption",
    "qrcode",
    "sqlite",
] }
matrix-sdk-sqlite = { version = "0.7.0", features = ["crypto-store"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["fs"] }
tracing = "0.1.40"
