[package]
name = "rachat-common"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
blake3 = { version = "1.5.1", features = ["rayon"] }
directories-next = "2.0.0"
keyring = "2.3.3"
matrix-sdk = { version = "0.7.1", default-features = false, features = [
    "anyhow",
    "markdown",
    "experimental-sliding-sync",
    "rustls-tls",
    "e2e-encryption",
    "qrcode",
    "sqlite",
] }
matrix-sdk-sqlite = { version = "0.7.0", features = ["crypto-store"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["fs"] }
tracing = "0.1.40"

[lints.rust]
missing-docs = "warn"


[lints.clippy]
pedantic = "warn"
nursery = "warn"
missing-docs-in-private-items = "warn"
panic = "forbid"
redundant-type-annotations = "warn"
str-to-string = "warn"
todo = "deny"
unwrap-used = "deny"
expect-used = "deny"

[target.x86_64-pc-windows-msvc.dependencies]
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
