[package]
name = "rachat-common"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = { version = "1.5.4", features = ["rayon"] }
chacha20poly1305 = "0.10.1"
ciborium = "0.2.2"
directories-next = "2.0.0"
educe = "0.6.0"
eyre = "0.6.12"
futures = "0.3.30"
keyring = "2.3.3"
matrix-sdk = { version = "0.7.1", default-features = false, features = [
    "anyhow",
    "markdown",
    "experimental-sliding-sync",
    "rustls-tls",
    "e2e-encryption",
    "qrcode",
    "sqlite",
] }
matrix-sdk-sqlite = { version = "0.7.0", features = ["crypto-store"] }
rand = "0.8.5"
rand_chacha = { version = "0.3.1", features = ["simd"] }
reqwest = { version = "0.12.4", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["fs", "parking_lot", "sync"] }
tracing = "0.1.40"

[lints.rust]
missing-docs = "warn"


[lints.clippy]
pedantic = "warn"
nursery = "warn"
missing-docs-in-private-items = "warn"
panic = "forbid"
redundant-type-annotations = "warn"
str-to-string = "warn"
todo = "deny"
unwrap-used = "deny"
expect-used = "deny"
module-name-repetitions = "allow"

[target.x86_64-pc-windows-msvc.dependencies]
libsqlite3-sys = { version = "0.27.0", features = ["bundled"] }
