[package]
name = "rachat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.3"
cxx = "1.0.123"
cxx-qt = "0.6.1"
cxx-qt-lib = "0.6.1"
eyre = "0.6.12"
once_cell = "1.19.0"
parking_lot = "0.12.2"
rachat-common = { version = "0.1.0", path = "../rachat-common" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.39.3", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
cxx-qt-build = { version = "0.6.1", features = ["link_qt_object_files"] }
