[package]
name = "rachat-config"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }

[lints]
workspace = true

[target."cfg(windows)".dependencies]
winver = "1"

[target.'cfg(windows)'.build-dependencies]
cxx-qt-build = "0.7.1"
