[package]
name = "rachat-config"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
eyre = "0.6.12"
notify = "8.0.0"
notify-debouncer-full = "0.5.0"
parking_lot = "0.12.3"
rachat-misc = { version = "0.1.0", path = "../rachat-misc" }
serde = "1.0.219"
serde_json = "1.0.140"
sys-locale = "0.3.2"
tokio = { version = "1.44.1", features = ["fs", "rt", "sync"] }
toml = "0.8.20"
tracing = "0.1.41"

[lints]
workspace = true

[target."cfg(windows)".dependencies]
winver = "1"

[target."cfg(windows)".build-dependencies]
cxx-qt-build = "0.7.1"
