[package]
name = "rachat-i18n"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
arc-swap = "1.7.1"
eyre = "0.6.12"
fluent-bundle = "0.15.3"
fluent-langneg = { version = "0.14.1", features = ["cldr"] }
fluent-templates = "0.13.0"
icu_locid = { version = "1.5.0", features = ["serde"] }
nonempty = "0.11.0"
parking_lot = "0.12.3"
rachat-config = { version = "0.1.0", path = "../rachat-config" }
tokio = { version = "1.44.1", features = ["macros", "sync"] }
tracing = "0.1.41"
unic-langid-impl = { version = "0.9.5", features = ["serde"] }

[lints]
workspace = true
