[package]
name = "rachat-misc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
eyre = "0.6.12"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
tracing-etw = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.2.0"

[lints]
workspace = true
