[package]
name = "rachat-misc"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
directories = "6.0.0"
eyre = "0.6.12"
tokio = { version = "1.44.1", features = ["fs"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
tracing-etw = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
tracing-oslog = "0.2.0"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.19.0"
tokio = { version = "1.44.1", features = ["fs", "macros", "rt"] }
