[package]
name = "rachat-qt"
version = "0.1.0"
edition = "2024"

links = "rachat-qt"

[dependencies]
cxx = "1.0.144"
cxx-qt = "0.7.1"
cxx-qt-lib = { version = "0.7.1", features = ["qt_gui", "qt_qml"] }
eyre = "0.6.12"
rachat = { version = "0.1.0", path = "../rachat" }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"

[build-dependencies]
cxx-qt-build = "0.7.1"
