[package]
name = "rachat-qt"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
cxx = "1.0.144"
cxx-qt = "0.7.1"
cxx-qt-lib = { version = "0.7.1", features = ["qt_gui", "qt_qml", "qt_quickcontrols"] }
eyre = "0.6.12"
rachat = { version = "0.1.0", path = "../rachat" }
rachat-config = { version = "0.1.0", path = "../rachat-config" }
rachat-i18n = { version = "0.1.0", path = "../rachat-i18n" }
tokio = { version = "1.44.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.41"

[build-dependencies]
cxx-qt-build = "0.7.1"

[lints]
workspace = true
