[package]
name = "rachat"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
color-eyre = "0.6.3"
eyre = "0.6.12"
rachat-misc = { version = "0.1.0", path = "../rachat-misc" }
tracing = "0.1.41"

[lints]
workspace = true
