[package]
name = "rachat"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
rachat-config = { version = "0.1.0", path = "../rachat-config" }
rachat-misc = { version = "0.1.0", path = "../rachat-misc" }
tokio = { version = "1.44.1", features = ["fs"] }
tracing = "0.1.41"

[lints]
workspace = true
